[package]
name = "nacos-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
once_cell = "1.17.1"
parking_lot = { version = "0.12.1", features = ["arc_lock"]}
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
to_url = { path ="../to_url" }
from_value_derive = "0.1.1"
futures = "0.3.26"
async-trait = "0.1.64"


[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "get_address"
path = "./benches/get_address.rs"
harness = false