[package]
name = "to_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
to_url_derive = { path = "../to_url_derive" }

[features]
default = ["to_url_derive"]
to_url_derive = []
