[package]
name = "to_url_derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ptechen/nacos-lib.git"
license = "MIT OR Apache-2.0"
description = "Rust Nacos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde_json = "1.0.93"
syn = "1.0.107"
